# entity-document-format

./: .tool-versions  README.md  example.edf  example_schema.edf  pyproject.toml
src/edf/: block.py  build.py  canonical.py  cli.py  datafy.py  grammar.lark  io.py  lark_parser.py  lex.py  parse.py  schema.py  xml.py
src/edf/parser/: __init__.py  build.py  parse.py
tests/: test_lex.py  test_parse.py
tests/parser/: test_lex.py  test_parse.py
