[tool.poetry]
name = "entity-document-format"
version = "0.1.0"
description = ""
authors = ["Tom Savage <tcsavage@gmail.com>"]
readme = "README.md"
packages = [{include = "edf", from = "src"}]
license = "MIT"

[tool.poetry.scripts]
edf = "edf.cli:edf_group"

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.2.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
graphviz = "^0.20.3"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
